  * img test: Bail gracefully when ImageMagick is not present.
  * meta: Fix [[!meta name=foo]] by closing the open quote.
  * Avoid unescaped "{" in regular expressions

  [ Joey Hess ]
  * emailauth: Added emailauth_sender config.
  * Modified page.tmpl to to set html lang= and dir= when
    values have been specified for them, which the po plugin does.

  [ Simon McVittie ]
  * Run autopkgtest tests using autodep8 and the pkg-perl team's
    infrastructure
  * t/img.t: do not spuriously skip
  * tests: consistently use done_testing instead of no_plan
  * Wrap and sort control files (wrap-and-sort -abst)
  * Add enough build-dependencies to run all tests, except for
    non-git VCSs
  * debian/copyright: update for the rename of openid-selector to
    login-selector
  * git: if no committer identity is known, set it to
    "IkiWiki <ikiwiki.info>" in .git/config. This resolves commit errors
    in versions of git that require a non-trivial committer identity.
  * inline, trail: rename show, feedshow parameters to limit, feedlimit
    (with backwards compatibility)

 -- Simon McVittie <smcv@debian.org>  Mon, 15 Jun 2015 18:13:23 +0100

ikiwiki (3.20150614) unstable; urgency=medium

  * inline: change default sort order from age to "age title" for
    determinism, partially fixing deterministic build for git-annex,
    ikiwiki-hosting etc. (Closes: #785757)
  * img: avoid ImageMagick misinterpreting filenames containing a colon
  * img test: set old timestamp on source file that will change, so that
    the test will pass even if it takes less than 1 second

 -- Simon McVittie <smcv@debian.org>  Sun, 14 Jun 2015 18:13:23 +0100

ikiwiki (3.20150610) unstable; urgency=low

  [ Joey Hess ]
  * New emailauth plugin lets users log in, without any registration,
    by simply clicking on a link in an email.
  * Re-remove google from openid selector; their openid provider is
    gone for good.
  * Make the openid selector display "Password" instead of "Other"