@@ -10,6 +10,8 @@ ikiwiki (3.20150615) UNRELEASED; urgency=medium
   * emailauth: Added emailauth_sender config.
   * Modified page.tmpl to to set html lang= and dir= when
     values have been specified for them, which the po plugin does.
+  * Specifically license the javascript underlay under the permissive
+    basewiki license.
 
   [ Simon McVittie ]
   * Run autopkgtest tests using autodep8 and the pkg-perl team's
